[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://Rocky Roads/Backgrounds/trees.png" type="Texture" id=2]
[ext_resource path="res://Rocky Roads/Deco/water_a_8frames.png" type="Texture" id=3]
[ext_resource path="res://Rocky Roads/Deco/sun.png" type="Texture" id=4]
[ext_resource path="res://Rocky Roads/Backgrounds/mountains_a.png" type="Texture" id=5]
[ext_resource path="res://Rocky Roads/Backgrounds/clouds.png" type="Texture" id=6]
[ext_resource path="res://Title.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.203922, 0, 1, 0.341176 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.203922, 0, 1, 0.341176 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.0
margin_bottom = 5.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaterA8Frames" type="Sprite" parent="."]
position = Vector2( 506, 77 )
scale = Vector2( 3.99219, 19.3438 )
texture = ExtResource( 3 )

[node name="MountainsA" type="Sprite" parent="."]
position = Vector2( 509, 270 )
scale = Vector2( 4, 3.32813 )
texture = ExtResource( 5 )

[node name="Trees" type="Sprite" parent="."]
position = Vector2( 509.5, 412 )
scale = Vector2( 4.00391, 3.28125 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -78.5
margin_top = -10.0
margin_right = 121.5
margin_bottom = 240.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGameButton" type="Button" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 20.0
custom_styles/focus = SubResource( 1 )
text = "Start Game"

[node name="Skins" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 200.0
margin_bottom = 44.0
text = "Customize your skin"

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 200.0
margin_bottom = 68.0
text = "Controller options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 200.0
margin_bottom = 92.0
custom_styles/focus = SubResource( 2 )
text = "Quit"

[node name="Clouds" type="Sprite" parent="."]
position = Vector2( 514, 52 )
scale = Vector2( 4.00391, 1.25391 )
texture = ExtResource( 6 )

[node name="Sun" type="Sprite" parent="."]
position = Vector2( 983, 22 )
scale = Vector2( 4.83347, 3.28125 )
texture = ExtResource( 4 )
hframes = 5

[node name="Title" type="Sprite" parent="."]
position = Vector2( 534, 99 )
scale = Vector2( 0.54393, 0.791176 )
texture = ExtResource( 7 )

[connection signal="pressed" from="VBoxContainer/StartGameButton" to="." method="_on_StartGameButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
